[package]
name = "fbp-rs"
version = "0.1.0"
authors = ["deciduously <github@deciduously.com>"]

[dependencies]

base64 = "0.9"
flate2 = { version = "1.0", features = ["zlib"], default-features = false}
geo = "0.9"
image = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]

pretty_assertions = "0.5"